[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/sprites/female.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/sprites/male.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme/images/background.png" type="Texture" id=3]
[ext_resource path="res://scenes/main/save_image.gd" type="Script" id=4]
[ext_resource path="res://scenes/main/main.gd" type="Script" id=5]
[ext_resource path="res://theme/resources/color_panel.tres" type="StyleBox" id=6]
[ext_resource path="res://theme/resources/loudeyes.tres" type="Theme" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.992157, 0.890196, 0.984314, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.921569, 0.670588, 0.827451, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 4

[sub_resource type="Theme" id=5]
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 3 )
LineEdit/styles/normal = SubResource( 4 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SaveImage" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprites" type="Control" parent="HBox"]
margin_right = 638.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Female" parent="HBox/Sprites" instance=ExtResource( 1 )]

[node name="Male" parent="HBox/Sprites" instance=ExtResource( 2 )]
visible = false

[node name="MarCon" type="MarginContainer" parent="HBox"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Options" type="VBoxContainer" parent="HBox/MarCon"]
margin_left = 10.0
margin_top = 10.0
margin_right = 628.0
margin_bottom = 710.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="HBox" type="HBoxContainer" parent="HBox/MarCon/Options"]
margin_right = 618.0
margin_bottom = 134.0

[node name="Dropdowns" type="VBoxContainer" parent="HBox/MarCon/Options/HBox"]
margin_right = 307.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GenderOptions" type="OptionButton" parent="HBox/MarCon/Options/HBox/Dropdowns"]
margin_right = 307.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
text = "Gender Options"

[node name="ItemOptions" type="MarginContainer" parent="HBox/MarCon/Options/HBox/Dropdowns"]
margin_top = 69.0
margin_right = 307.0
margin_bottom = 134.0

[node name="Female" type="OptionButton" parent="HBox/MarCon/Options/HBox/Dropdowns/ItemOptions"]
margin_right = 307.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
text = "Item Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Male" type="OptionButton" parent="HBox/MarCon/Options/HBox/Dropdowns/ItemOptions"]
visible = false
margin_right = 307.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
text = "Item Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPanel" type="PanelContainer" parent="HBox/MarCon/Options/HBox"]
margin_left = 311.0
margin_right = 618.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorBox" type="HBoxContainer" parent="HBox/MarCon/Options/HBox/ColorPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 297.0
margin_bottom = 124.0

[node name="SkinBox" type="VBoxContainer" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox"]
margin_right = 93.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Skin" type="Label" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/SkinBox"]
margin_right = 93.0
margin_bottom = 29.0
text = "Skin"
align = 1

[node name="PanCon" type="PanelContainer" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/SkinBox"]
margin_top = 33.0
margin_right = 93.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 6 )

[node name="SkinColor" type="ColorRect" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/SkinBox/PanCon"]
show_behind_parent = true
margin_left = 3.0
margin_top = 3.0
margin_right = 90.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EyeBox" type="VBoxContainer" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox"]
margin_left = 97.0
margin_right = 190.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Eye" type="Label" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/EyeBox"]
margin_right = 93.0
margin_bottom = 29.0
text = "Eye"
align = 1

[node name="PanCon" type="PanelContainer" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/EyeBox"]
margin_top = 33.0
margin_right = 93.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 6 )

[node name="EyeColor" type="ColorRect" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/EyeBox/PanCon"]
show_behind_parent = true
margin_left = 3.0
margin_top = 3.0
margin_right = 90.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HairBox" type="VBoxContainer" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox"]
margin_left = 194.0
margin_right = 287.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Hair" type="Label" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/HairBox"]
margin_right = 93.0
margin_bottom = 29.0
text = "Hair"
align = 1

[node name="PanCon" type="PanelContainer" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/HairBox"]
margin_top = 33.0
margin_right = 93.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 6 )

[node name="HairColor" type="ColorRect" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/HairBox/PanCon"]
show_behind_parent = true
margin_left = 3.0
margin_top = 3.0
margin_right = 90.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemPanel" type="PanelContainer" parent="HBox/MarCon/Options"]
margin_top = 142.0
margin_right = 618.0
margin_bottom = 627.0
size_flags_vertical = 3

[node name="Female" type="Control" parent="HBox/MarCon/Options/ItemPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 608.0
margin_bottom = 475.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Male" type="Control" parent="HBox/MarCon/Options/ItemPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 608.0
margin_bottom = 475.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="HBox/MarCon/Options"]
margin_top = 635.0
margin_right = 618.0
margin_bottom = 700.0

[node name="Clear" type="Button" parent="HBox/MarCon/Options/Buttons"]
margin_right = 203.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Clear All"

[node name="Save" type="Button" parent="HBox/MarCon/Options/Buttons"]
margin_left = 207.0
margin_right = 410.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Save Image"

[node name="Credits" type="Button" parent="HBox/MarCon/Options/Buttons"]
margin_left = 414.0
margin_right = 618.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Credits & Info"

[node name="ColorPop" type="PopupPanel" parent="."]
margin_right = 363.0
margin_bottom = 533.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="ColorPop"]
margin_left = 10.0
margin_top = 10.0
margin_right = 353.0
margin_bottom = 523.0
theme = SubResource( 5 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 536.0
margin_bottom = 276.0
rect_min_size = Vector2( 960, 540 )
window_title = "Save your character!"
resizable = true
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/Users/falli/OneDrive/Documents/My Documents/My Godot/Sutemo"
current_path = "/Users/falli/OneDrive/Documents/My Documents/My Godot/Sutemo/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsPop" type="PopupPanel" parent="."]
margin_right = 980.0
margin_bottom = 560.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="CreditsPop"]
margin_left = 10.0
margin_top = 10.0
margin_right = 970.0
margin_bottom = 550.0
rect_min_size = Vector2( 960, 540 )
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UseInfo" type="RichTextLabel" parent="CreditsPop/HBox"]
margin_top = 29.0
margin_right = 465.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center][font=res://theme/fonts/the_bold_font.tres]Info[/font][/center]
[b]Sutemo's asset use information:[/b]
This sprite can be used in personal or commercial projects. however you can't resell the sprite on its own.

Feel free to ask me if you have any questions or suggestion for my next project. or you can drop by to my deviant art page [url]https://www.deviantart.com/stereo-mono[/url]

You can also support me here [url]https://ko-fi.com/sutemo[/url]

Thank you."
text = "Info
Sutemo's asset use information:
This sprite can be used in personal or commercial projects. however you can't resell the sprite on its own.

Feel free to ask me if you have any questions or suggestion for my next project. or you can drop by to my deviant art page https://www.deviantart.com/stereo-mono

You can also support me here https://ko-fi.com/sutemo

Thank you."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="RichTextLabel" parent="CreditsPop/HBox"]
margin_left = 495.0
margin_top = 89.0
margin_right = 960.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center][font=res://theme/fonts/the_bold_font.tres]Credits[/font][/center]
[b]People[/b]
[url=https://sutemo.itch.io/female-character]Sprite[/url] [url=https://sutemo.itch.io/male-character-sprite-for-visual-novel]Artwork[/url] - [url=https://sutemo.itch.io/]Sutemo[/url]
[url=https://loudeyes.itch.io/dating-sim-ui-pack]GUI Artwork[/url] -[url=https://loudeyes.itch.io/]Lynda Mc Donald[/url]
[url=https://emily2.itch.io/sutemos-character-creator]Programming[/url] - [url=https://emily2.itch.io/]Emily Yi[/url]
[url=https://github.com/Pukkah/HTML5-File-Exchange-for-Godot]HTML5 File Exchange for Godot[/url] - [url=https://github.com/Pukkah]laame[/url]
[b]Programs[/b]
[url=https://krita.org/en/]Krita[/url]
[url=https://godotengine.org/]Godot[/url]
[b]Fonts[/b]
[url=https://www.dafont.com/the-bold-font.font]The Bold Font[/url]
[url=https://www.dafont.com/roboto.font]Roboto[/url]"
text = "Credits
People
Sprite Artwork - Sutemo
GUI Artwork -Lynda Mc Donald
Programming - Emily Yi
HTML5 File Exchange for Godot - laame
Programs
Krita
Godot
Fonts
The Bold Font
Roboto"
fit_content_height = true

[node name="WaitPop" type="PopupPanel" parent="."]
margin_right = 480.0
margin_bottom = 270.0
rect_min_size = Vector2( 480, 270 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitLabel" type="Label" parent="WaitPop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
text = "Generating image..."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="HBox/MarCon/Options/HBox/Dropdowns/GenderOptions" to="." method="_on_gender_selected"]
[connection signal="gui_input" from="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/SkinBox/PanCon/SkinColor" to="." method="_on_color_gui_input" binds= [ 0 ]]
[connection signal="gui_input" from="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/EyeBox/PanCon/EyeColor" to="." method="_on_color_gui_input" binds= [ 1 ]]
[connection signal="gui_input" from="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/HairBox/PanCon/HairColor" to="." method="_on_color_gui_input" binds= [ 2 ]]
[connection signal="pressed" from="HBox/MarCon/Options/Buttons/Clear" to="." method="_on_clear_all_pressed"]
[connection signal="color_changed" from="ColorPop/ColorPicker" to="." method="_on_color_changed"]
